--- a/order.css
+++ b/order.css
@@ -11,7 +11,7 @@ a {
     display: inline-block;
     margin: 20px;
     text-decoration: none;
-    color: #db9c48;
+    color: #ffe8c5;
     font-size: 1.2rem;
     font-weight: 600;
     transition: color 0.3s ease;
